[Feature] Ability to erode Template Structures